--- a/notes/jargon.html
+++ b/notes/jargon.html
@@ -29,7 +29,7 @@
 <article>
   <h1>jargon</h1>
   <p><a href="http://www.catb.org/jargon/html/go01.html">http://www.catb.org/jargon/html/go01.html</a></p>
-<h2 id="new">New</h2>
+<h2 id="my-additions">My additions</h2>
 <ul>
 <li>solved problem</li>
 <li>unreasonable effectiveness</li>
