--- a/notes/ideas.html
+++ b/notes/ideas.html
@@ -2,8 +2,8 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8" />
-<link rel="icon" type="image/x-icon" href="favicon.ico" />
-<link rel="stylesheet" href="templates/style.css" />
+<link rel="icon" type="image/x-icon" href="../favicon.ico" />
+<link rel="stylesheet" href="../templates/style.css" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="author" content="João Pinheiro" />
 <meta name="keywords" content="technology computer software engineering" />
@@ -19,27 +19,31 @@
 <meta property="article:tag" content="software" />
 <meta property="article:tag" content="engineering" />
 
-  <meta property="og:url" content="https://pineman.github.io/notes.html" />
-  <title>Notes</title>
-  <meta property="og:title" content="Notes" />
-  <meta name="description" content="Notes" />
-  <meta property="og:description" content="Notes" />
+  <meta property="og:url" content="https://pineman.github.io/notes/ideas.html" />
+  <title>ideas</title>
+  <meta property="og:title" content="ideas" />
 </head>
 <body>
 <div id="wrap">
-<a href="index.html">&lt; back</a>
+<a href="../notes.html">&lt; back</a>
 <article>
-  <h1>Notes</h1>
-  <ul>
-    <li><a href="notes/ideas.html">ideas</a></li>
-    <li><a href="notes/jargon.html">jargon</a></li>
-    <li><a href="notes/laws.html">laws</a></li>
-    <li><a href="notes/notes.html">notes</a></li>
-    <li><a href="notes/quotes.html">quotes</a></li>
-    <li><a href="notes/save_llm_threads.html">save_llm_threads</a></li>
-  </ul>
+  <h1>ideas</h1>
+  <h1 id="sidegigs">sidegigs</h1>
+<h2 id="photovideo-hosting">photo/video hosting</h2>
+<ul>
+<li>cheaper. using b2? fancy tricks with zfs dedup?</li>
+<li>better link saving</li>
+</ul>
+<h2 id="wikinotion">wiki/notion</h2>
+<p>um sistema de wiki que é basicamente permanent storage de todos os LLM chats que já tiveste, plus everything else. tipo notas/wiki e LLM chats all in one. podes tentar sumarizar depois. important parts é:</p>
+<ul>
+<li>permanent storage</li>
+<li>one stop shop</li>
+<li>semantic search isto não é só o notion?</li>
+</ul>
+
 </article>
-<a href="index.html">&lt; back</a>
+<a href="../notes.html">&lt; back</a>
 </div>
 </body>
 </html>
