--- a/notes/notes.html
+++ b/notes/notes.html
@@ -417,6 +417,7 @@ data = [AVRO.decode(Base64.decode64(&#39;string from kafka-ui&#39;))]</code></pr
 <li><code>pip install csvkit; mise reshim; csvcut -c 2 file.csv</code></li>
 <li>Typhoeus::Config.verbose = true</li>
 <li>pretty print html: <code>puts Nokogiri::XML(html_string, &amp;:noblanks).to_xml(indent: 2)</code></li>
+<li>remember the <code>timeout</code> shell command</li>
 </ul>
 <h2 id="agents">Agents</h2>
 <h3 id="claude">Claude</h3>
