--- a/notes/notes.html
+++ b/notes/notes.html
@@ -173,6 +173,7 @@ JSON.parse(j)</code></pre>
 <li>do not define two callbacks with the same method name. use a -&gt; { lambda }. <a href="https://code.jjb.cc/you-can-t-declare-after_-_commit-or-after_commit-callbacks-for-the-same-method-more-than-once">https://code.jjb.cc/you-can-t-declare-after_-_commit-or-after_commit-callbacks-for-the-same-method-more-than-once</a></li>
 <li>keyset pagination: instead of using the offset of limit... offset, we basically give the offset in the WHERE, so psql can jump straight to it using a BTree index.</li>
 <li>gem for postgresql cursors: <a href="https://github.com/afair/postgresql_cursor">https://github.com/afair/postgresql_cursor</a></li>
+<li><code>retry</code> seems like a good idea but it's an infinite loop waiting to happen. always bound it with retries</li>
 </ul>
 <h2 id="rspec">RSpec</h2>
 <ul>
@@ -309,6 +310,8 @@ ORDER BY url, timestamp DESC</code></pre>
 </table>
 <ul>
 <li>max_standby_streaming_delay: It doesn't matter if we see the replica lag chart go to +30m. What matters is if the chart never goes to 0 in 30 consecutive minutes. It might not be a single slow query but many consecutive slow ones that never allow the replica to catch up on the WAL.</li>
+<li>autovacuum tweaks: <code>WITH (autovacuum_analyze_scale_factor='0.01', autovacuum_analyze_threshold='1000', autovacuum_vacuum_scale_factor='0.01', autovacuum_vacuum_threshold='1000');</code>, autovacuum_vacuum_cost_delay, maintenance_work_mem</li>
+<li>multiXact space exhaustion (not just ids!) <a href="https://metronome.com/blog/root-cause-analysis-postgresql-multixact-member-exhaustion-incidents-may-2025">https://metronome.com/blog/root-cause-analysis-postgresql-multixact-member-exhaustion-incidents-may-2025</a> - is this untrackable on cloud sql, excepting logs?</li>
 </ul>
 <h2 id="analytics-cdc">Analytics, CDC</h2>
 <p><a href="https://github.com/sequinstream/sequin">https://github.com/sequinstream/sequin</a> debezium ok but you need kafka what's the best solution to move data from your oltp postgresql into... everywhere else? an olap db, ETL, snowflake?</p>
