--- a/notes/jargon.html
+++ b/notes/jargon.html
@@ -31,6 +31,7 @@
   <p><a href="http://www.catb.org/jargon/html/go01.html">http://www.catb.org/jargon/html/go01.html</a></p>
 <h2 id="my-additions">My additions</h2>
 <ul>
+<li>second order effects</li>
 <li>solved problem</li>
 <li>unreasonable effectiveness</li>
 <li>root of all evil</li>
@@ -51,6 +52,11 @@
 <li>e.g. if something fails due to having too many items (or whatever), you might just say ETOOMANYITEMS.</li>
 <li>if you have no context on a joke, you might say ENOCONTEXT</li>
 </ul></li>
+<li>type checks
+<ul>
+<li>instead of 'it tracks' or 'fits the description'</li>
+</ul></li>
+<li>slope over y intercept</li>
 </ul>
 <h2 id="favorites-in-the-jargon-file">favorites in the jargon file</h2>
 <ul>
@@ -67,6 +73,8 @@
 </ul>
 <h2 id="llm-stuff-wip">LLM stuff? wip</h2>
 <ul>
+<li>context</li>
+<li>gain of function</li>
 <li>ralph</li>
 <li>RLHF'd into oblivion</li>
 <li>slop</li>
